@@ -54,6 +54,20 @@
             "email": "web-evangelist@apple.com",
             "twitter": "@jonathandavis"
         }
+    },
+    {
+        "name": "WebGPU",
+        "status": {
+            "status": "In Development"
+        },
+        "url": "https://webgpu.io",
+        "description": "WebGPU exposes an API for performing operations, such as rendering and computation, on a Graphics Processing Unit.",
+        "keywords": ["webgpu", "gpu", "compute", "3d", "rendering", "render", "wgsl", "shading"],
+        "contact": {
+            "name": "Myles C. Maxfield",
+            "email": "mmaxfield@apple.com",
+            "twitter": "@Litherum"
+        }
     }
     ],
 
@@ -458,6 +472,16 @@
         "documentation-url": "https://tc39.es/proposal-temporal/docs/",
         "description": "Temporal brings a modern date/time API to the ECMAScript language.",
         "specification": "ESNext"
+    },
+    {
+        "name": "WebGPU",
+        "status": {
+            "status": "In Development"
+        },
+        "url": "https://github.com/gpuweb/gpuweb",
+        "documentation-url": "https://webgpu.io",
+        "description": "WebGPU exposes an API for performing operations, such as rendering and computation, on a Graphics Processing Unit.",
+        "specification": "WebGPU"
     }
     ]
 }
