@@ -1,3 +1,12 @@
+2021-07-29  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Add WebGPU to webkit.org/status
+        https://bugs.webkit.org/show_bug.cgi?id=228623
+
+        Reviewed by Robin Morisset.
+
+        * features.json:
+
 2021-07-28  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Yarr should perform BoyerMoore search
